# opengl-quaternions

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  flake.nix  imgui.ini  justfile  meson.build
.cache/clangd/index/: app.cpp.2CE0A249CABB4DE7.idx  glad.c.BC4A59675E27DA86.idx  glad.h.8DD802C9A2CAFC4D.idx  khrplatform.h.463B446506B67C77.idx
include/: shader.hpp
include/glad/: glad.h
shaders/: shader.frag
src/: app.cpp  glad.c  shader.cpp
src/.cache/clangd/index/: app.cpp.2CE0A249CABB4DE7.idx
